unpackaged/main/default/objects/GSR_Lead_Time_PR__c/GSR_Lead_Time_PR__c.object-meta.xml
<CustomObject>
    <label>Lead Time Pull Request</label>
    <nameField>
        <displayFormat>GSLTPR-{000000}</displayFormat>
        <label>Lead Time Pull Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Time Pull Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>