unpackaged/main/default/objects/GSR_Lead_Time_PR__c/fields/ADO_Ids__c.field-meta.xml
<CustomField>
    <fullName>ADO_Ids__c</fullName>
    <label>ADO Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>