unpackaged/main/default/objects/GSR_Lead_Time_PR__c/fields/Author_Username__c.field-meta.xml
<CustomField>
    <fullName>Author_Username__c</fullName>
    <label>Author Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>