unpackaged/main/default/objects/GSR_Lead_Time_PR__c/fields/Deployment_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Completed_At__c</fullName>
    <label>Deployment Completed At</label>
    <type>DateTime</type>
</CustomField>