unpackaged/main/default/objects/GSR_Lead_Time_PR__c/fields/Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>Environment_Name__c</fullName>
    <label>Environment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>