unpackaged/main/default/objects/GSR_Lead_Time_PR__c/fields/GS_Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>GS_Environment_Id__c</fullName>
    <externalId>true</externalId>
    <label>GS Environment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>