unpackaged/main/default/objects/GSR_Lead_Time_PR__c/fields/Jira_IDs__c.field-meta.xml
<CustomField>
    <fullName>Jira_IDs__c</fullName>
    <label>Jira IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>