unpackaged/main/default/objects/GSR_Lead_Time_PR__c/fields/Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Id__c</fullName>
    <label>Pipeline Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>