unpackaged/main/default/objects/GSR_Lead_Time_PR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Pipeline_Id__c</columns>
    <columns>Environment_Name__c</columns>
    <columns>Author_Name__c</columns>
    <columns>Created_At__c</columns>
    <columns>Deployment_Completed_At__c</columns>
    <columns>Deployment_Id__c</columns>
    <columns>Feature_Name__c</columns>
    <columns>GS_Environment_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>